Fixes for Java 1.4 compilation errors
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@8929 b29ace70-8910-0410-8dcc-aa2fc6433167